# poopman

./: .gitignore  CLAUDE.md  Cargo.toml  KNOWN_ISSUES.md  README.md  build.rs  error.txt
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-06-17-ui-redesign-warm-light.md  2026-06-17-url-params-sync-refactor.md  2026-06-18-environment-variables.md  2026-06-23-ui-redesign-floating-cards.md  2026-06-24-code-snippet-generation.md  2026-06-26-history-search.md  2026-07-14-curl-import.md  2026-07-14-formdata-code-export.md  2026-07-14-github-pages-site.md  2026-07-14-image-preview.md  2026-07-14-keyboard-shortcuts.md  2026-07-14-request-cancellation.md  2026-07-15-app-wide-scrolling.md  2026-07-15-tab-cycling-focus-url.md  2026-07-23-auth-helper-tab.md
docs/superpowers/specs/: 2026-06-17-ui-redesign-design.md  2026-06-17-ui-redesign-mockup.html  2026-06-17-url-params-sync-refactor-design.md  2026-06-18-environment-variables-design.md  2026-06-23-ui-redesign-floating-cards-design.md  2026-06-26-history-search-design.md  2026-06-26-response-body-orange-border-corners-design.md  2026-07-14-formdata-code-export-design.md  2026-07-14-github-pages-site-design.md  2026-07-14-quick-wins-design.md  2026-07-15-app-wide-scrolling-design.md  2026-07-15-tab-cycling-focus-url-design.md  2026-07-20-header-key-autocomplete-design.md  2026-07-22-auth-helper-tab-design.md
src/: app.rs  auth_editor.rs  body_editor.rs  code_formatter.rs  code_gen.rs  code_snippet_panel.rs  curl_import.rs  db.rs  environment_manager.rs  format.rs  header_completion.rs  header_names.rs  history_panel.rs  http_client.rs  main.rs  menu_bar.rs  request_editor.rs  request_tab.rs  response_viewer.rs  tab_bar.rs  theme.rs  types.rs  ui.rs  url_params.rs  variables.rs
