[package]
edition = "2021"
name = "poopman"
description = "A Postman-like API client built with GPUI Component."
publish = false
version = "0.1.0"

[dependencies]
anyhow = "1"
gpui = "0.2.2"
gpui-component = "0.4"
log = "0.4"
env_logger = "0.11"

chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
futures = "0.3"
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
rust-embed = "8.0"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
url = "2.5"
urlencoding = "2.1"

[target.'cfg(target_os = "windows")'.build-dependencies]
winresource = "0.1"

[package.metadata.bundle]
name = "Poopman"
identifier = "com.poopman.app"
icon = ["assets/icons/logo.ico"]
version = "0.1.0"
copyright = "Copyright (c) 2024"
category = "Utility"
short_description = "A Postman-like API client"

[package.metadata.bundle.osx]
minimum_system_version = "11.0"

[package.metadata.bundle.windows]
wix = true
